DTSAM-506 add IBCA mapping rule